--- a/public/market-m/all-categories.html
+++ b/public/market-m/all-categories.html
@@ -38,7 +38,7 @@
       <div class="main-content all-categories">
         <div class="category-head">
           <a href="#"></a>
-          <span>all categories</span>
+          <h2>all categories</h2>
         </div>
 
 
