--- a/public/market/inquiry.html
+++ b/public/market/inquiry.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <div class="page-inquiry">
+  <div class="page_inquiry">
     <header class="header">
       <div class="upnav">
         <div class="content-grid clearfix">
