--- a/public/transaction-document/delivery-note-form/delivery-note-form.html
+++ b/public/transaction-document/delivery-note-form/delivery-note-form.html
@@ -151,133 +151,194 @@
       </div>
       <div class="main-content">
         <h2 class="main-title">DELIVERY NOTE</h2>
+        <div class="invoice-note-wrap">
+          <div class="invoice-note_top">
+            <div class="invoice-note_left">
+              <table>
+                <tr>
+                  <td colspan="2">
+                    <strong>1. SENDER </strong>
+                    <div class="contents">
+                      <ul>
+                        <li><span>Seller Company</span></li>
+                        <li><span>(Zip:XXX-XXX) XF, XXXXX, XXXXXXXX, XXXXX, Seoul, Korea
+                        </span></li>
+                        <li><span>Seller</span></li>
+                        <li><span>Tel:</span> <span>+XX-XX-XXXX-XXXX</span></li>
+                        <li><span>Fax:</span> <span>+XX-XX-XXXX-XXXX</span></li>
+                      </ul>
+                    </div>
 
-        <table>
-          <tr>
-            <td colspan="2">
-              <strong>1. SENDER </strong>
-              <ul>
-                <li><span>Seller Company</span></li>
-                <li><span>(Zip:XXX-XXX) XF, XXXXX, XXXXXXXX, XXXXX, Seoul, Korea
-                Seller</span></li>
-                <li><span>Tel:</span> <span>+XX-XX-XXXX-XXXX</span></li>
-                <li><span>Fax:</span> <span>+XX-XX-XXXX-XXXX</span></li>
-              </ul>
-            </td>
-          </tr>
-          <tr>
-            <td colspan="2">
-              <strong>2.  FOR ACCOUNT & RISK OF MESSRS </strong>
-              <ul>
-                <li><span>SK TELECOM Co., LTD.</span></li>
-                <li><span>65, Euljiro, Jung-gu, SEOUL, KOREA 100-999
-                Smart[InterDeal]</span></li>
-                <li><span>Tel:</span> <span>+82-2-6100-1359</span></li>
-                <li><span>Fax:</span> <span>+82-2-6100-0114</span></li>
-              </ul>
-            </td>
-          </tr>
-          <tr>
-            <td colspan="2">
-              <strong>3. NOTIFY PARTY</strong>
-              <span>SAME AS ABOVE</span>
+                  </td>
+                </tr>
+                <tr>
+                  <td colspan="2">
+                    <strong>2.  FOR ACCOUNT & RISK OF MESSRS </strong>
+                    <div class="contents">
+                      <ul>
+                        <li><span>SK TELECOM Co., LTD.</span></li>
+                        <li><span>65, Euljiro, Jung-gu, SEOUL, KOREA 100-999
+                        </span></li>
+                        <li><span>Smart[InterDeal]</span></li>
+                        <li><span>Tel:</span> <span>+82-2-6100-1359</span></li>
+                        <li><span>Fax:</span> <span>+82-2-6100-0114</span></li>
+                      </ul>
+                    </div>
 
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <strong>4. PORT OF LOADING</strong>
-              <span>INCHEON, KOREA</span>
+                  </td>
+                </tr>
+                <tr>
+                  <td colspan="2">
+                    <strong>3. NOTIFY PARTY</strong>
+                    <div class="contents">
+                      <span>SAME AS ABOVE</span>
+                    </div>
 
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <strong>4. PORT OF LOADING</strong>
+                    <div class="contents">
+                      <span>INCHEON, KOREA</span>
+                    </div>
 
-            </td>
-            <td>
-              <strong>5. FINAL DESTINATION</strong>
-              <span>JAPAN</span>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <strong>6. CARRIER</strong>
-              <span>Korea marine transportco</span>
-            </td>
-            <td>
-              <strong> 7. SAILING ON/ABOUT</strong>
-            </td>
-          </tr>
-        </table>
-        <table>
-          <tr>
-            <td colspan="2">
-              <strong>8. B/L NO. & DATE</strong>
-              <span>SK20170712-001</span>
-              <span>2017-07-21</span>
+                  </td>
+                  <td>
+                    <strong>5. FINAL DESTINATION</strong>
+                    <div class="contents">
+                      <span>JAPAN</span>
+                    </div>
 
-            </td>
-          </tr>
-          <tr>
-            <td colspan="2">
-              <strong>9.TRACKING NO.</strong>
-              <span>OT17KR-0904-NK12</span>
-            </td>
-            <td colspan="2">
-              <strong>10. REMARKS</strong>
-              <ul>
-                <li><span>CIF</span></li>
-                <li></li>
-                <li></li>
-              </ul>
-            </td>
+                  </td>
+                </tr>
+                <tr>
+                  <td style="border-bottom: none;">
+                    <strong>6. CARRIER</strong>
 
+                    <div class="contents">
+                      <span>Korea marine transportco</span>
+                    </div>
+                  </td>
+                  <td style="border-bottom: none;">
+                    <strong> 7. SAILING ON/ABOUT</strong>
+                    <div class="contents">
+                      <span></span>
+                    </div>
 
-          </tr>
-        </table>
-        <table>
-          <thead>
-            <tr>
-              <th>11.DESCRIPTION OF GOODS</th>
-              <th>12.CODE</th>
-              <th>13.Q’TY(UNIT)</th>
-              <th>14.C/NO</th>
-              <th>15.N/W(KGS)</th>
-              <th>16.G/W(KGS)</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>1 Index Gear Box</td>
-              <td>AB8465689</td>
-              <td>1</td>
-              <td>1</td>
-              <td>10.00</td>
-              <td>100.00</td>
-            </tr>
-            <tr>
-              <td>2 Product2</td>
-              <td>AB8465689</td>
-              <td>1</td>
-              <td>2</td>
-              <td>10.00</td>
-              <td>100.00</td>
-            </tr>
-            <tr>
-              <td>3 Product3</td>
-              <td>AB8465689</td>
-              <td>1</td>
-              <td>3</td>
-              <td>10.00</td>
-              <td>100.00</td>
-            </tr>
-            <tr>
-              <td>4 Product4</td>
-              <td>AB8465689</td>
-              <td>1</td>
-              <td>4</td>
-              <td>10.00</td>
-              <td>100.00</td>
-            </tr>
-          </tbody>
-        </table>
+                  </td>
+                </tr>
+              </table>
+            </div>
+            <div class="invoice-note_right">
+              <table>
+                <tr>
+                  <td colspan="2">
+                    <strong>8. B/L NO. & DATE</strong>
+                    <div class="contents">
+                      <span>SK20170712-001</span>
+                      <span class="fr">2017-07-21</span>
+                    </div>
+
+                  </td>
+                </tr>
+                <tr>
+                  <td colspan="2">
+                    <strong>9. TRACKING NO. </strong>
+                    <div class="contents">
+                      <span>T/T</span>
+                      <span class="fr">2017-07-21</span>
+                    </div>
+
+                  </td>
+                </tr>
+                <tr>
+                  <td colspan="2" style="border-bottom: none;">
+                    <strong>10. REMARKS</strong>
+                    <div class="contents contents_remarks">
+                      <ul>
+                        <li><span>CIF</span></li>
+                        <li></li>
+                        <li></li>
+                      </ul>
+                    </div>
+
+                  </td>
+                </tr>
+              </table>
+            </div>
+
+          </div>
+          <div class="invoice-note_bottom">
+            <table>
+              <thead>
+                <tr>
+                  <th class="description">11.<strong>DESCRIPTION OF GOODS</strong</th>
+                  <th class="code">12.<strong>CODE</strong></th>
+                  <th class="unit">13.<strong>Q’TY(UNIT)</strong></th>
+                  <th class="number">14.<strong>C/NO</strong></th>
+                  <th class="weight_n">15.<strong>N/W(KGS)</strong></th>
+                  <th class="weight_g">16.<strong>G/W(KGS)</strong></th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>1 Index Gear Box</td>
+                  <td>AB8465689</td>
+                  <td>1</td>
+                  <td>1</td>
+                  <td>10.00</td>
+                  <td>100.00</td>
+                </tr>
+                <tr>
+                  <td>2 Product2</td>
+                  <td>AB8465689</td>
+                  <td>1</td>
+                  <td>2</td>
+                  <td>10.00</td>
+                  <td>100.00</td>
+                </tr>
+                <tr>
+                  <td>3 Product3</td>
+                  <td>AB8465689</td>
+                  <td>1</td>
+                  <td>3</td>
+                  <td>10.00</td>
+                  <td>100.00</td>
+                </tr>
+                <tr>
+                  <td>4 Product4</td>
+                  <td>AB8465689</td>
+                  <td>1</td>
+                  <td>4</td>
+                  <td>10.00</td>
+                  <td>100.00</td>
+                </tr>
+              </tbody>
+            </table>
+
+          </div>
+        </div>
+        <div class="signature-wrap_v2 clearfix">
+          <div class="signature_sender">
+            <div class="sign">
+              Authorized Signature
+            </div>
+            <div class="signer-wrap">
+              <span>Signed by sender</span>
+              <span class="name">Print Name</span>
+            </div>
+          </div>
+          <div class="signature_receiver">
+            <div class="sign">
+              Authorized Signature
+            </div>
+            <div class="signer-wrap">
+              <span>Signed by receiver</span>
+              <span class="name">Print Name</span>
+            </div>
+          </div>
+        </div>
       </div>
       <div class="bottom-info">
         <div class="sk-logo"></div>
