--- a/public/transaction-document/proforma-invoice/proforma-invoice.html
+++ b/public/transaction-document/proforma-invoice/proforma-invoice.html
@@ -15,7 +15,7 @@
       <div class="top-info">
         <div class="date">
           <strong>Date</strong>
-          <span></span>
+          <span>2017-07-21</span>
         </div>
         <div class="page">
           <strong>Page</strong>
@@ -24,13 +24,13 @@
         <div class="logo-mark"><h1></h1></div>
       </div>
       <div class="main-content">
-        <h2 class="main-title">PURCHASING ORDER</h2>
+        <h2 class="main-title">PROFORMA INVOICE</h2>
         <div class="contact-point">
           <div class="sender-wrap">
             <strong class="sender">Sender</strong>
             <div class="sender-contact">
               <ul>
-                <li>Agent Company</li>
+                <li>Seller Company</li>
                 <li>(Zip:XXX-XXX) XF, XXXXX, XXX</li>
                 <li>XXXXX, XXXXX, Seoul, Korea</li>
                 <li>Seller</li>
@@ -176,7 +176,19 @@
             </tfoot>
           </table>
         </div>
-        
+        <div class="signature-wrap">
+          <div class="signature">
+            <div class="sign">
+              Authorized Signature
+            </div>
+            <div class="signer-wrap">
+              <span>Signed by</span>
+              <span class="name">Print Name</span>
+            </div>
+          </div>
+        </div>
+
+
       </div>
       <div class="bottom-info">
         <div class="sk-logo"></div>
