--- a/public/transaction-document/invoice-form/commercial-invoice.html
+++ b/public/transaction-document/invoice-form/commercial-invoice.html
@@ -31,52 +31,75 @@
               <table>
                 <tr>
                   <td colspan="2">
-                    <strong>1. SENDER </strong>
-                    <ul>
-                      <li><span>Seller Company</span></li>
-                      <li><span>(Zip:XXX-XXX) XF, XXXXX, XXXXXXXX, XXXXX, Seoul, Korea
-                      Seller</span></li>
-                      <li><span>Tel:</span> <span>+XX-XX-XXXX-XXXX</span></li>
-                      <li><span>Fax:</span> <span>+XX-XX-XXXX-XXXX</span></li>
-                    </ul>
+                    <strong>1. SHIPPER/EXPORTER </strong>
+                    <div class="contents">
+                      <ul>
+                        <li><span>Seller Company</span></li>
+                        <li><span>(Zip:XXX-XXX) XF, XXXXX, XXXXXXXX, XXXXX, Seoul, Korea
+                        </span></li>
+                        <li><span>Seller</span></li>
+                        <li><span>Tel:</span> <span>+XX-XX-XXXX-XXXX</span></li>
+                        <li><span>Fax:</span> <span>+XX-XX-XXXX-XXXX</span></li>
+                      </ul>
+                    </div>
+
                   </td>
                 </tr>
                 <tr>
                   <td colspan="2">
                     <strong>2.  FOR ACCOUNT & RISK OF MESSRS </strong>
-                    <ul>
-                      <li><span>SK TELECOM Co., LTD.</span></li>
-                      <li><span>65, Euljiro, Jung-gu, SEOUL, KOREA 100-999
-                      Smart[InterDeal]</span></li>
-                      <li><span>Tel:</span> <span>+82-2-6100-1359</span></li>
-                      <li><span>Fax:</span> <span>+82-2-6100-0114</span></li>
-                    </ul>
+                    <div class="contents">
+                      <ul>
+                        <li><span>SK TELECOM Co., LTD.</span></li>
+                        <li><span>65, Euljiro, Jung-gu, SEOUL, KOREA 100-999
+                        </span></li>
+                        <li><span>Smart[InterDeal]</span></li>
+                        <li><span>Tel:</span> <span>+82-2-6100-1359</span></li>
+                        <li><span>Fax:</span> <span>+82-2-6100-0114</span></li>
+                      </ul>
+                    </div>
+
                   </td>
                 </tr>
                 <tr>
                   <td colspan="2">
                     <strong>3. NOTIFY PARTY</strong>
-                    <span>SAME AS ABOVE</span>
+                    <div class="contents">
+                      <span>SAME AS ABOVE</span>
+                    </div>
+
                   </td>
                 </tr>
                 <tr>
                   <td>
                     <strong>4. PORT OF LOADING</strong>
-                    <span>INCHEON, KOREA</span>
+                    <div class="contents">
+                      <span>INCHEON, KOREA</span>
+                    </div>
+
                   </td>
                   <td>
                     <strong>5. FINAL DESTINATION</strong>
-                    <span>JAPAN</span>
+                    <div class="contents">
+                      <span>JAPAN</span>
+                    </div>
+
                   </td>
                 </tr>
                 <tr>
                   <td style="border-bottom: none;">
                     <strong>6. CARRIER</strong>
-                    <span>Korea marine transportco</span>
+
+                    <div class="contents">
+                      <span>Korea marine transportco</span>
+                    </div>
                   </td>
                   <td style="border-bottom: none;">
                     <strong> 7. SAILING ON/ABOUT</strong>
-                    <span></span>
+                    <div class="contents">
+                      <span></span>
+                    </div>
+
                   </td>
                 </tr>
               </table>
@@ -85,25 +108,35 @@
               <table>
                 <tr>
                   <td colspan="2">
-                    <strong>8. B/L NO. & DATE</strong>
-                    <span>SK20170712-001</span>
-                    <span>2017-07-21</span>
+                    <strong>8. INVOICE NO. & DATE</strong>
+                    <div class="contents">
+                      <span>SK20170712-001</span>
+                      <span class="fr">2017-07-21</span>
+                    </div>
+
                   </td>
                 </tr>
                 <tr>
                   <td colspan="2">
-                    <strong>9.TRACKING NO.</strong>
-                    <span>OT17KR-0904-NK12</span>
+                    <strong>9. L/C NO.&Date </strong>
+                    <div class="contents">
+                      <span>T/T</span>
+                      <span class="fr">2017-07-21</span>
+                    </div>
+
                   </td>
                 </tr>
                 <tr>
                   <td colspan="2" style="border-bottom: none;">
                     <strong>10. REMARKS</strong>
-                    <ul>
-                      <li><span>CIF</span></li>
-                      <li></li>
-                      <li></li>
-                    </ul>
+                    <div class="contents contents_remarks">
+                      <ul>
+                        <li><span>CIF</span></li>
+                        <li></li>
+                        <li></li>
+                      </ul>
+                    </div>
+
                   </td>
                 </tr>
               </table>
@@ -114,12 +147,12 @@
             <table>
               <thead>
                 <tr>
-                  <th>11.<strong>DESCRIPTION OF GOODS</strong</th>
-                  <th>12.<strong>CODE</strong></th>
-                  <th>13.<strong>Q’TY(UNIT)</strong></th>
-                  <th>14.<strong>C/NO</strong></th>
-                  <th>15.<strong>N/W(KGS)</strong></th>
-                  <th>16.<strong>G/W(KGS)</strong></th>
+                  <th class="description">11.<strong>DESCRIPTION OF GOODS</strong</th>
+                  <th class="code">12.<strong>CODE</strong></th>
+                  <th class="unit">13.<strong>Q’TY(UNIT)</strong></th>
+                  <th class="number">14.<strong>C/NO</strong></th>
+                  <th class="weight_n">15.<strong>N/W(KGS)</strong></th>
+                  <th class="weight_g">16.<strong>G/W(KGS)</strong></th>
                 </tr>
               </thead>
               <tbody>
@@ -214,11 +247,11 @@
         <div class="signature-wrap">
           <div class="signature">
             <div class="sign">
-
+              Authorized Signature
             </div>
             <div class="signer-wrap">
               <span>Signed by</span>
-              <span>Ricky Hong</span>
+              <span class="name">Print Name</span>
             </div>
           </div>
         </div>
